# team-project-25spring-36

./: .gitignore  Design - 36.md  README.md  build-all.bat  build-all.sh  build.py  design - 36.md  final-report-team36.md  frontend-build.js  metrics.md  poetry-readme.md  pyproject.toml  report1 - 36.md
.github/workflows/: build.yml
backend/: .gitignore  config.py  main.py
backend/app/: config.py  main.py
backend/app/database/: engine.py  model.py
backend/app/router/: entry.py  share.py  user.py
backend/app/util/: encrypt.py
backend/database/: engine.py  model.py
backend/db/: engine.py  model.py
backend/deploy/: backend.bat  backend.sh  docker-compose.yaml  requirements.txt
backend/docs/: README.md  deployer.md
backend/intellide/: config.py  main.py
backend/intellide/cache/: __init__.py  cache.py  startup.py
backend/intellide/database/: __init__.py  database.py  engine.py  model.py  startup.py
backend/intellide/docker/: __init__.py  startup.py
backend/intellide/router/: entry.py  share.py  user.py
backend/intellide/routers/: __init__.py  course.py  course_chat.py  entry.py  (+8 more)
backend/router/: entry.py  share.py  user.py
backend/test/: clean_db.py  test_auto.py
backend/tools/: tree.py
backend/util/: auth.py  encrypt.py  lang.py  path.py  response.py
deployment/: README.md  backend.bat  backend.sh  requirements.txt  start.bat
docs/: build.md  metrics.md  testing.md
frontend/docs/: README.md
frontend/intelligent-ide/: .gitignore  CHANGELOG.md  esbuild.js  nyc.config.js  package-lock.json  package.json  sonar-project.properties
(+77 files in other folders)
